# tide

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEW_UI_PLAN.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/alacritty_terminal/src/: event.rs
crates/alacritty_terminal/src/term/: mod.rs
crates/tide-app/: Cargo.toml  icon.icns
crates/tide-app/benches/: git_status_lookup.rs
crates/tide-app/src/: action.rs  app_pane.rs  behavior_tests.rs  browser_pane.rs  diff.rs  diff_pane.rs  drag_drop.rs  editor_pane.rs  event_handler.rs  event_loop.rs  file_tree.rs  gpu.rs  header.rs  input.rs  layout_compute.rs  main.rs  pane.rs  rendering.rs  search.rs  session.rs  settings.rs  theme.rs  ui.rs  ui_state.rs  update.rs  workspace.rs
crates/tide-app/src/action/: file_ops.rs  focus_nav.rs  mod.rs  pane_lifecycle.rs  text_extract.rs
crates/tide-app/src/editor_pane/: mod.rs  rendering.rs
crates/tide-app/src/event_handler/: click.rs  ime.rs  keyboard.rs  mod.rs  mouse.rs  scroll.rs  search.rs  text_routing.rs
crates/tide-app/src/rendering/: chrome.rs  cursor.rs  grid.rs  hover.rs  ime.rs  mod.rs  overlays.rs
crates/tide-core/: Cargo.toml
crates/tide-core/src/: lib.rs
crates/tide-editor/: Cargo.toml
crates/tide-editor/src/: buffer.rs  cursor.rs  highlight.rs  input.rs  lib.rs  markdown.rs  undo.rs
crates/tide-editor/syntaxes/: JSX.sublime-syntax
crates/tide-input/: Cargo.toml
crates/tide-input/src/: lib.rs  tests.rs
crates/tide-layout/: Cargo.toml
crates/tide-layout/src/: lib.rs  node.rs  tab_group.rs  tests.rs
crates/tide-platform/: Cargo.toml  build.rs
crates/tide-platform/src/: lib.rs
crates/tide-platform/src/macos/: app.rs  cgs.rs  ime_proxy.rs  mod.rs  view.rs  webview.rs  window.rs
crates/tide-renderer/: Cargo.toml
crates/tide-renderer/src/: atlas.rs  chrome.rs  font.rs  grid.rs  init.rs  lib.rs  overlay.rs  shaders.rs  vertex.rs
crates/tide-terminal/: Cargo.toml
crates/tide-terminal/benches/: throughput.rs
crates/tide-terminal/src/: color.rs  git.rs  lib.rs
crates/tide-tree/: Cargo.toml
crates/tide-tree/src/: lib.rs
docs/: README.md  context-map.md  glossary.md  workspace-research.md
docs/domain/: app.md  core-types.md  editor.md  file-tree.md  input.md  layout.md  platform.md  renderer.md  terminal.md
docs/flows/: keystroke-to-action.md  modal-interactions.md  pane-lifecycle.md  terminal-output.md  workspace-switch.md
docs/specs/: editor.md  file-tree.md  ime.md  input-routing.md  launcher.md  modal.md  pane-lifecycle.md  search.md  session.md  terminal-sync.md  theme.md  workspace.md
docs/testing/: behavior-tests.md
scripts/: dev-test.sh
