[workspace]
members = [
    "crates/tide-core",
    "crates/tide-renderer",
    "crates/tide-terminal",
    "crates/tide-layout",
    "crates/tide-tree",
    "crates/tide-input",
    "crates/tide-editor",
    "crates/tide-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.21.0"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
tide-core = { path = "crates/tide-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
criterion = { version = "0.5", features = ["html_reports"] }
