[workspace]
members = [
    "crates/tide-core",
    "crates/tide-renderer",
    "crates/tide-terminal",
    "crates/tide-layout",
    "crates/tide-tree",
    "crates/tide-input",
    "crates/tide-editor",
    "crates/tide-platform",
    "crates/tide-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.37.4"
license = "MIT"
repository = "https://github.com/eatnug/tide"
authors = ["eatnug"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = "symbols"

# CI/CD 배포용 (cargo bundle --profile dist -p tide-app)
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1

[workspace.dependencies]
tide-core = { path = "crates/tide-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
criterion = { version = "0.5", features = ["html_reports"] }

[patch.crates-io]
alacritty_terminal = { path = "crates/alacritty_terminal" }
