[package]
name = "tide-app"
edition.workspace = true
version.workspace = true

[dependencies]
tide-core = { workspace = true }
tide-renderer = { path = "../tide-renderer" }
tide-terminal = { path = "../tide-terminal" }
tide-editor = { path = "../tide-editor" }
tide-layout = { path = "../tide-layout" }
tide-tree = { path = "../tide-tree" }
tide-input = { path = "../tide-input" }
winit = "0.30"
wgpu = "23"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
arboard = "3"
