[package]
name = "tide-app"
edition.workspace = true
version.workspace = true

[package.metadata.bundle]
name = "Tide"
identifier = "com.eatnug.tide"
icon = ["icon.icns"]
category = "public.app-category.developer-tools"
osx_minimum_system_version = "13.0"

[dependencies]
tide-core = { workspace = true }
tide-renderer = { path = "../tide-renderer" }
tide-terminal = { path = "../tide-terminal" }
tide-editor = { path = "../tide-editor" }
tide-layout = { path = "../tide-layout" }
tide-tree = { path = "../tide-tree" }
tide-input = { path = "../tide-input" }
winit = "0.30"
wgpu = "23"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
arboard = "3"
unicode-width = "0.2"
open = "5"
notify = "6"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
