[package]
name = "tide-editor"
description = "Editor and diff viewer for Tide"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tide-core = { workspace = true }
syntect = "5"
pulldown-cmark = "0.12"
unicode-width = "0.2"
log = "0.4"
