[package]
name = "tide-platform"
edition.workspace = true
version.workspace = true

[dependencies]
tide-core = { workspace = true }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSArray",
    "NSAttributedString",
    "NSGeometry",
    "NSNotification",
    "NSRange",
    "NSString",
    "NSThread",
    "NSValue",
] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSCursor",
    "NSEvent",
    "NSGraphics",
    "NSMenu",
    "NSRunningApplication",
    "NSResponder",
    "NSText",
    "NSTextInputClient",
    "NSTextInputContext",
    "NSTrackingArea",
    "NSView",
    "NSWindow",
    "NSScreen",
] }
objc2-quartz-core = { version = "0.2", features = [
    "CALayer",
    "CAMetalLayer",
] }
