[package]
name = "tide-platform"
description = "Native macOS platform layer for Tide"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tide-core = { workspace = true }
raw-window-handle = "0.6"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSArray",
    "NSAttributedString",
    "NSGeometry",
    "NSNotification",
    "NSRange",
    "NSString",
    "NSThread",
    "NSValue",
] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSCursor",
    "NSEvent",
    "NSGraphics",
    "NSMenu",
    "NSRunningApplication",
    "NSResponder",
    "NSText",
    "NSTextInputClient",
    "NSTextInputContext",
    "NSTrackingArea",
    "NSView",
    "NSWindow",
    "NSScreen",
] }
objc2-quartz-core = { version = "0.2", features = [
    "CALayer",
    "CAMetalLayer",
] }
