[package]
name = "tide-terminal"
description = "PTY and terminal emulation backend for Tide"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tide-core = { workspace = true }
alacritty_terminal = "0.25"
log = "0.4"
libc = "0.2"
signal-hook = "0.3"
regex = "1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "throughput"
harness = false
