[package]
name = "tide-tree"
description = "File tree with git status for Tide"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tide-core = { workspace = true }
notify = "6"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
